test/asm/sym-collision.err
warning: sym-collision.asm(20): [-Wpurge]
    Purging a label "dork"
error: sym-collision.asm(25):
    Interpolated symbol "dork" does not exist; it was purged
Assembly aborted with 1 error!
